# flutter-translate

./: .gitignore  README.md
.github/workflows/: build.yml  release.yml
docs/: ffi-api-design.md  flutter-frontend-dev.md  rust-backend-dev.md  开发任务拆解.md  需求文档.md
flatpak/: com.xym.ft.Waylex.desktop  com.xym.ft.Waylex.metainfo.xml  com.xym.ft.Waylex.yaml
flutter/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter/lib/: main.dart
flutter/lib/app/: app.dart
flutter/lib/app/router/: app_router.dart
flutter/lib/app/theme/: app_theme.dart
flutter/lib/core/constants/: app_constants.dart  storage_keys.dart
flutter/lib/core/enums/: desktop_env.dart  provider_type.dart  translation_status.dart
flutter/lib/core/errors/: app_exception.dart  failure.dart
flutter/lib/core/utils/: debounce.dart  platform_detector.dart
flutter/lib/data/datasources/: ffi_datasource.dart
flutter/lib/data/models/: active_session.dart  language_pref.dart  prompt_template.dart  provider_config.dart  shortcut_binding.dart  translation_result.dart  translation_rule.dart
flutter/lib/data/repositories/: config_repository.dart  session_repository.dart  translation_repository.dart
flutter/lib/domain/entities/: translation_session.dart
flutter/lib/domain/usecases/: compare_usecase.dart  config_usecase.dart  ocr_usecase.dart  translate_usecase.dart
flutter/lib/presentation/controllers/: settings_controller.dart  translation_controller.dart
flutter/lib/presentation/pages/: compare_page.dart  floating_page.dart  main_page.dart  provider_edit_page.dart  settings_page.dart
flutter/linux/: CMakeLists.txt
flutter/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/linux/runner/: my_application.cc
flutter/test/: widget_test.dart
hyprland/: flutter-translate.conf
native/: Cargo.toml
native/src/: frb_generated.rs  lib.rs
native/src/clipboard/: mod.rs
native/src/config/: desktop_env.rs  mod.rs  secret.rs  storage.rs
native/src/ffi/: bridge.rs  error.rs  mod.rs  types.rs
native/src/hotkey/: evdev.rs  hyprland.rs  kde.rs  mod.rs
native/src/ocr/: hyprland.rs  kde.rs  mod.rs  screenshot.rs  tesseract.rs
native/src/platform/common/: ocr_tesseract.rs
native/src/platform/linux/: clipboard.rs  mod.rs  screenshot.rs
native/src/platform/linux/hotkey/: evdev.rs  hyprland.rs  kde.rs
native/src/platform/linux/tray/: indicator.rs  menu.rs  mod.rs
native/src/tests/: config_test.rs  integration_test.rs  mod.rs  platform_test.rs  translate_test.rs
native/src/translate/: engine.rs  mod.rs  router.rs
native/src/translate/provider/: anthropic.rs  azure.rs  custom.rs  deepl.rs  deepseek.rs  glm.rs  google.rs  kimi.rs  mod.rs  openai.rs  qwen.rs
native/src/tray/: indicator.rs  menu.rs  mod.rs
native/src/update/: mod.rs
scripts/: build.sh  gen_bridge.sh  package_appimage.sh  release.sh
(+30 files in other folders)
