[package]
name = "flutter-translate-native"
version = "2.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# FFI 桥接
flutter_rust_bridge = { version = "=2.12.0", features = ["chrono"] }

# 异步运行时
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"

# HTTP 客户端 — 使用 rustls-tls 替代 openssl，消除跨平台链接问题
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OCR 图像预处理
image = { version = "0.25", features = ["png"] }

# 配置存储
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
keyring = "3.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具类
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1.21"
dirs = "6.0"
semver = "1.0"

# ==================== Linux 独占依赖 ====================
[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.9"
evdev = "0.13"
zbus = { version = "5.11", features = ["tokio"] }
secret-service = { version = "5.1", features = ["rt-tokio-crypto-rust"] }

# ==================== Windows 独占依赖 ====================
[target.'cfg(target_os = "windows")'.dependencies]
global-hotkey = "0.6"
arboard = "3.4"
tray-icon = "0.19"
xcap = "0.9"

# ==================== macOS 独占依赖 ====================
[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.6"
arboard = "3.4"
tray-icon = "0.19"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7"
